# stm32_gas_station

./: .cproject  .gitignore  .gitlab-ci.yml  .gitmodules  .mxproject  .project  CHANGELOG.md  CMakeLists.txt  README.md  README.ru.md  arm-none-eabi-gcc.cmake  stm32_gas_station Debug.launch  stm32_gas_station Release.launch  stm32_gas_station.ioc
.github/workflows/: build-binaries.yml  cmake-multi-platform.yml
Core/Inc/: access_manager.h  clock.h  defines.h  eeprom_at24cm01_storage.h  gpio.h  indicate_manager.h  keyboard4x3_manager.h  main.h  modbus_manager.h  modbus_rtu_base.h  modbus_rtu_slave.h  pump_manager.h  record_manager.h  settings_manager.h  soul.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  storage_data_manager.h  tim.h  ui_manager.h  umka200_manager.h  utils.h  wiegand.h
Core/Src/: access_manager.c  adc.c  clock.c  eeprom_at24cm01_storage.c  gpio.c  i2c.c  indicate_manager.c  keyboard4x3_manager.c  main.c  main.cpp  modbus_manager.c  modbus_rtu_slave.c  pump_manager.c  record_manager.c  rtc.c  settings_manager.c  soul.c  stm32f4xx_it.c  storage_data_manager.c  tim.c  ui_manager.c  umka200_manager.c  usart.c  utils.c  wiegand.c
Core/Startup/: startup_stm32f401rbtx.s
GALILEOSKY7X/: galileosky_gas_station.gss  galileosky_gas_station_modbus_cards_count.cpp  galileosky_gas_station_modbus_clear_limit.cpp  galileosky_gas_station_modbus_conf_ver.cpp  galileosky_gas_station_modbus_get_card.cpp  galileosky_gas_station_modbus_get_id.cpp  galileosky_gas_station_modbus_get_limit.cpp  galileosky_gas_station_modbus_get_limit_type.cpp  galileosky_gas_station_modbus_get_log_id.cpp  galileosky_gas_station_modbus_get_next_log.cpp  galileosky_gas_station_modbus_glob_cards_count.cpp  galileosky_gas_station_modbus_glob_get_log_id.cpp  galileosky_gas_station_modbus_glob_get_next_log.cpp  galileosky_gas_station_modbus_glob_set_log_id.cpp  galileosky_gas_station_modbus_set_card.cpp  galileosky_gas_station_modbus_set_conf_ver.cpp  galileosky_gas_station_modbus_set_id.cpp  galileosky_gas_station_modbus_set_limit.cpp  galileosky_gas_station_modbus_set_limit_type.cpp  galileosky_gas_station_modbus_set_log_id.cpp  galileosky_gas_station_modbus_start.cpp  galileosky_gas_station_modbus_update_time.cpp  galileosky_gas_station_test.gcm  modbus_update_time.cpp  settings.gcm  settings2.gcm
Modules/Access/: Access.cpp  Access.h
Modules/Clock/: clock.c  clock.h
Modules/ModbusManager/: ModbusManager.cpp  ModbusManager.h  ModbusRegister.h  ModbusTableService.cpp  ModbusTableService.h  modbus_settings.h
Modules/ModbusMananger/: ModbusManager.cpp  ModbusManager.h  ModbusRegister.cpp  ModbusRegister.h  ModbusTableService.cpp  ModbusTableService.h  modbus_rtu_base.h  modbus_rtu_slave.c
Modules/Pump/: Pump.cpp  Pump.h  pump.c
Modules/RecordDB/: Record.cpp  Record.h  RecordClust.cpp  RecordClust.h  RecordDB.cpp  RecordDB.h  RecordTmp.cpp  RecordTmp.h  RecordType.h
Modules/SettingsDB/: SettingsDB.cpp  SettingsDB.h  settings.c  settings.h
Modules/SoulGuard/: SoulGuard.h  soul.c  soul.h
Modules/SoulGuard/Watchdogs/: MemoryWatchdog.cpp  PowerWatchdog.cpp  RTCWatchdog.cpp  RTCWatchdog.h  RestartWatchdog.cpp  RestartWatchdog.h  SettingsWatchdog.cpp  SettingsWatchdog.h  StackWatchdog.cpp  Watchdogs.h
Modules/StorageAT/: CMakeLists.txt
Modules/StorageAT/include/: StorageAT.h  StorageData.h  StoragePage.h  StorageSearch.h  StorageSector.h  StorageType.h
Modules/StorageAT/src/: StorageAT.cpp  StorageData.cpp  StoragePage.cpp  StorageSearch.cpp  StorageSector.cpp
Modules/StorageDriver/: StorageDriver.cpp  StorageDriver.h
Modules/TM1637/: TM1637.c  TM1637.h
Modules/UI/: UI.cpp  UI.h
Modules/UIManager/: UIManager.cpp  UIManager.h
Modules/at24cm01/: at24cm01.c  at24cm01.h
Modules/system/: system.c  system.h
